syntax = "proto3";

package file_service;

option go_package = "local/tages/pkg/proto";

service FileService {
  rpc UploadFile(stream UploadRequest) returns (UploadResponse);
  rpc DownloadFile(DownloadRequest) returns (stream DownloadResponse);
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
}

message UploadRequest {
  oneof data {
    string filename = 1;
    bytes chunk_data = 2;
  }
}

message UploadResponse {
  bool success = 1;
  string message = 2;
}

message DownloadRequest {
  string filename = 1;
}

message DownloadResponse {
  bytes chunk_data = 1;
}

message ListFilesRequest {}

message ListFilesResponse {
  repeated FileInfo files = 1;
}

message FileInfo {
  string filename = 1;
  string created_at = 2;
  string updated_at = 3;
}